--- a/css/styles.css
+++ b/css/styles.css
@@ -896,7 +896,8 @@ h3.my-professiono {
 }
 
 @media (max-width:767px) {
-
+.contact .contact-form .col-6,
+    .contact .contact-info-item, /* <--- This ensures contact info items stack */
     .contact .contact-form .col-6,
     .contact .contact-info-item,
     .portfolio .portfolio-item,
