--- a/css/styles.css
+++ b/css/styles.css
@@ -890,7 +890,8 @@ h3.my-professiono {
     }
 
 
-    .home .home-info {
+    .home .home-info,
+    .about .about-content .personal-info .info-item {
         flex: 0 0 100%;
         max-width: 100%;
     }
@@ -914,6 +915,7 @@ h3.my-professiono {
 @media (max-width:767px) {
 
     .contact .contact-form .col-6,
+    .about .about-content .personal-info .info-item,
     .contact .contact-info-item,
     /* <--- This ensures contact info items stack */
     .contact .contact-form .col-6,
